--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,21 @@
 .row{
-    display: grid;
-    grid-template-columns: 50% 50%;
+    display: flex;
+
 }
 .left img{
     width: 45vw;
     height: 50vh;
-    margin: 2em;
+    margin: 7em 2em 4em 1em;
 }
 .content{
     padding-top: 7em;
+}
+
+.content h1{
+    font-size: 4rem;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.content p{
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
 }
