--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .row{
     display: flex;
+    flex-wrap: wrap;
 
 }
 .left img{
@@ -9,10 +10,11 @@
 }
 .content{
     padding-top: 7em;
+    width: 50%;
 }
 
 .content h1{
-    font-size: 4rem;
+    font-size: 3rem;
     font-family: Arial, Helvetica, sans-serif;
 }
 .content p{
