--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,8 @@
 
 }
 .left img{
-    width: 45vw;
+    min-width: 45vw;
+    max-width: 100vw;
     height: 50vh;
     margin: 7em 2em 4em 1em;
 }
@@ -15,9 +16,11 @@
 
 .content h1{
     font-size: 3rem;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif; 
+    padding: 1em;
 }
 .content p{
     font-size: 1.3rem;
     font-family: Arial, Helvetica, sans-serif;
+    padding: 1em;
 }
