--- a/src/App.css
+++ b/src/App.css
@@ -18,9 +18,11 @@
     font-size: 3rem;
     font-family: Arial, Helvetica, sans-serif; 
     padding: 1em;
+    color:#272d50 
 }
 .content p{
     font-size: 1.3rem;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 1em;
+    padding: 0.5em;
+    color:#272d50 
 }
