--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,13 @@
 .content h1{
     font-size: 3rem;
     font-family: Arial, Helvetica, sans-serif; 
-    padding: 1em;
-    color:#272d50 
+    padding: 0.9em;
+    color:#272d50 ;
 }
 .content p{
     font-size: 1.3rem;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 0.5em;
-    color:#272d50 
+    padding: 0em 2em 2em 3em;
+    color:#272d50 ;
+    width: 50vw;
 }
