--- a/src/pages/DAOs/DAOs.css
+++ b/src/pages/DAOs/DAOs.css
@@ -1,3 +1,20 @@
 .daos{
-    font-size: 1.2em;
+   display: flex;
+   flex-wrap: wrap;
+   gap: 2em;
+   padding-top: 2em;
+   font-family: Arial, Helvetica, sans-serif;
+   color: #272d50;
+}
+
+img{
+    width: 400px;
+    border-radius: 10px;
+}
+.para{
+    width: 400px;
+    margin: 0 auto;
+    gap: 2em;
+    border: 1px solid #272d50;
+    border-radius: 10px;
 }
