--- a/src/pages/DAOs/DAOs.css
+++ b/src/pages/DAOs/DAOs.css
@@ -15,6 +15,6 @@ img{
     width: 400px;
     margin: 0 auto;
     gap: 2em;
-    border: 1px solid #272d50;
+    /* border: 1px solid #272d50; */
     border-radius: 10px;
 }
