--- a/src/Components/FooterContent/Footer.css
+++ b/src/Components/FooterContent/Footer.css
@@ -11,7 +11,7 @@
 .footer {
   position: relative;
   width: 100%;
-  background: #3586ff;
+  background: #000B4F;
   min-height: 100px;
   padding: 20px 50px;
   display: flex;
