--- a/src/pages/DAOs/DAOs.css
+++ b/src/pages/DAOs/DAOs.css
@@ -21,6 +21,6 @@ img{
     margin: 0 auto;
     gap: 2em;
     border-radius: 10px;
-    background-color: #a6b3cc;
+    background-color: #fafcfe;
     padding: 1em;
 }
