--- a/src/pages/DAOs/DAOs.css
+++ b/src/pages/DAOs/DAOs.css
@@ -12,7 +12,7 @@
     width: 400px;
     height: 250px;
     border-radius: 10px;
-    box-shadow:  3px 3px 10px#000B4F,
+    box-shadow:  3px 5px 10px#9fa1ac,
              -5px -5px 10px #a6b3cc; 
     
 }
